docs: 更新课程介绍与Web3世界观文档
-重新组织了第一章内容结构，从面试场景切入，增强实用性
- 补充了Web1到Web3的完整演进历程，帮助理解技术发展脉络
- 增加了中国Web3发展现状、政策环境与产业特色分析
- 完善了Web3与区块链的关系辨析，明确技术基础与应用愿景
- 扩展了Web3交易所的分类与核心业务功能介绍
- 更新了课程定位，更加强调实战性与技术跃迁目标
-优化了文档结构，使内容层次更加清晰，便于读者理解

--- a/doc/01.课程介绍与 Web3 世界观.md
+++ b/doc/01.课程介绍与 Web3 世界观.md
@@ -1,160 +1,205 @@
-# 第一章：课程介绍与 Web3 世界观 (精讲版)
+# 从零构建数字货币交易所：一次 Web3 金融科技系统的深度实践
 
-## 引言：一次构建真实世界金融科技系统的远征
+## 引言：当面试官问你"能否从零搭建一个交易所"
 
-欢迎各位同学，来到 Web3 构建的前线！
+"如果让你从零开始设计一个数字货币交易所，你会怎么做？"
 
-在接下来的课程中，我们将不再是旁观者，而是作为缔造者，亲手构建一个在真实世界中极具挑战性的金融科技系统——一个功能完备、可实际运营的数字货币交易所。这并非一次简单的编码练习，而是一场深入分布式系统、金融科技与区块链技术交汇点的硬核远征。
+这个面试问题让无数后端开发者心头一紧。交易所，这个听起来高大上的金融科技系统，似乎离我们的日常工作很遥远，却又在 Web3 浪潮中扮演着越来越重要的角色。当你每天处理着用户管理、订单处理、支付集成这些"普通"业务时，是否想过：这些技术如何支撑起一个每秒处理数万笔交易、涉及真金白银的金融系统？
 
-在启程之前，本章将是我们整个旅程的“**战略地图**”。我们将不触及一行代码，而是专注于理解我们为何而来，将往何处去，并回答几个根本性问题：我们为何要学习构建交易所？它在波澜壮阔的 Web3 浪潮中扮演着怎样的角色？这门课程将为你带来怎样的核心竞争力？Web3、区块链、CEX、DEX 这些令人眼花缭乱的术语，其本质究竟是什么？
+更重要的是，当区块链、Web3 这些概念铺天盖地而来时，作为后端开发者，我们如何利用自己最熟悉的 Java、Spring Boot 技术栈，在这个新兴领域找到自己的位置？
 
-理解“**Why**”，远比直接上手“**How**”更为重要。它将帮助我们在后续的学习中始终保持清晰的目标感，更好地理解每一个架构决策和代码实现背后的深意。
+这篇文章将带你踏上一段完整的旅程。我们不会停留在理论探讨，而是会亲手构建一个功能完备的数字货币交易所——Bizzan。在这个过程中，你将从一个单纯的应用开发者，蜕变为能够驾驭复杂金融系统的架构师。
 
-那么，让我们正式启程，从宏观的视角，一窥 Web3 世界的版图，并找到我们即将构建的这个项目的准确位置。
+## 第一章：Web3 的前世今生与未来展望
 
----
+### 从 Web1 到 Web3 的演进历程
 
-## 第一节：这门课程适合谁？一场为后端开发者设计的技术跃迁
+互联网的发展经历了三个重要阶段，每个阶段都重新定义了信息的创建、分发和价值捕获方式。
 
-本课程专为那些渴望实现**技术能力跃迁**的后端开发者而设计。
+**Web1（1990-2004）**：这是"只读"的互联网时代。少数内容创作者向广大被动受众提供信息，网站主要是静态的 HTML 页面。用户只能浏览信息，无法参与内容创建。这个时代的代表是新浪、搜狐等门户网站，它们垄断了信息的发布权。
 
-如果你掌握 Java 和 Spring Boot 基础，但日常工作多为“增删改查”，渴望接触真正复杂的业务场景；如果你对高并发、分布式系统有理论认识，却缺乏一个大型项目的实战经验来检验和升华；又或者你对 Web3 和区块链技术充满好奇，但不知如何从最熟悉的工程角度切入。那么，这门课程就是为你量身打造的。
+**Web2（2004-现在）**：这是"读写"的互联网时代，也被称为"社交网络时代"。用户不再只是被动接收信息，而是能够创建和分享内容。Facebook、Twitter、YouTube 等平台崛起，用户生成内容（UGC）成为主流。然而，这些中心化平台掌握了数据的控制权，用户创造的价值大部分被平台捕获。
 
-我们不要求你预先掌握任何金融或区块链知识。课程将从零开始，为你扫清所有概念障碍，让你能平滑地进入这个激动人心的新领域。
+**Web3（2020-未来）**：这是"读写拥有"的互联网时代。用户不仅能够创建内容，还能够拥有自己的数据和数字资产。通过区块链技术和密码学，Web3 实现了数据的去中心化存储和价值的确权。这是从"信息互联网"向"价值互联网"的根本转变。
 
----
+### Web3 的核心特征与技术基石
 
-## 第二节：你将收获什么？从“应用开发者”到“架构师”的蜕变
+Web3 不是一个单一的技术，而是一个由多种技术构成的复杂生态系统。它的核心特征建立在四个技术支柱之上：
 
-本课程并非一个简单的 CRUD 教学项目，而是一个涵盖了**高并发金融系统设计、分布式微服务架构、区块链技术对接、海量数据处理**等多个领域的综合性实战平台。完成本课程后，你将收获一套完整的、可直接应用于企业级项目的知识体系。
+**去中心化网络**：Web3 应用运行在去中心化的网络上，没有单点故障，也不容易被审查。这种架构保证了服务的持续可用性和抗审查性。
 
-| 能力维度               | 关键技能点 (你将掌握的硬核能力)                                                                                                                                                                                                                                                       |
-| :--------------------- | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| **企业级后端架构能力** | 能够独立设计和实现复杂的微服务架构，熟练运用 Spring Cloud 全家桶，并具备处理高并发场景（如行情剧烈波动、秒杀）的实战能力。                                                                                                                                                            |
-| **金融科技业务知识**   | 深入理解交易所的核心业务，包括**订单簿 (Order Book)**：记录所有买卖挂单的实时列表；**撮合引擎 (Matching Engine)**：执行买卖单匹配的核心算法；**K 线生成**：将成交数据聚合为价格走势图；以及钱包账户模型、**KYC/AML** (了解你的客户/反洗钱) 流程等，具备与金融产品经理高效对话的能力。 |
-| **Web3 技术对接**      | 掌握中心化系统与主流公链（比特币、以太坊）安全交互的全过程，理解 RPC 对接、充值监控、交易广播等关键技术，真正打通 Web2 与 Web3 的技术壁垒。                                                                                                                                           |
-| **中间件实战应用**     | 能够根据业务场景，熟练地运用 Kafka 进行业务解耦和数据缓冲，运用 Redis 构建高性能缓存，运用 MongoDB 存储时序数据，并配置 Nginx 作为服务网关。                                                                                                                                          |
-| **全栈开发视野**       | 能够清晰地描绘出用户一次下单请求，从前端发出，到网关分发，再到后端一系列微服务协同处理，最终与区块链交互并返回结果的全链路流程。                                                                                                                                                      |
+**数字身份主权**：用户通过钱包和私钥控制自己的数字身份。这个身份可以在不同应用间无缝迁移，不受任何中心化平台控制。
 
-**一言以蔽之**：这门课程的目标，是让你从一个执行需求的“应用开发者”，蜕变为一个能够主导复杂系统设计的“**架构师**”。
+**数据所有权**：用户的个人数据和数字资产存储在区块链上，只有拥有私钥的用户才能访问和控制。这从根本上改变了 Web2 时代的数据所有权关系。
 
----
-
-## 第三节：核心概念：Web3 与区块链
-
-在深入探讨 Web3 与 Web2 的区别之前，我们必须首先厘清两个最核心的概念：**Web3** 和 **区块链**，以及它们之间密不可分的关系。
-
-简单来说，**Web3 是下一代互联网的愿景，而区块链是实现这个愿景的核心技术基石**。
-
-- **Web3 (The "What")**：它设想了一个**去中心化**的、**用户拥有自己数据**的互联网。在 Web3 的世界里，权力不再仅仅集中于少数科技巨头，而是分散给所有用户。你创造的内容、你的数字身份、你的资产，都由你自己通过密码学技术（即私钥）来掌控。它旨在构建一个“价值互联网”，让价值的创造者也能成为价值的拥有者。
-
-- **区块链 (The "How")**：它是支撑 Web3 愿景得以实现的技术手段。我们可以将区块链理解为一个**公开、透明、且无法被任何人篡改的全球共享账本**。正是因为它的这些特性（去中心化、不可篡改、透明），我们才能够在没有信任中介（如银行、政府或大公司）的情况下，点对点地进行价值转移和数据交互。
-
-**两者的关系**：如果说 Web3 是一座宏伟的建筑，那么区块链就是它的地基。没有区块链提供的无需信任的底层协议，Web3 关于用户主权和去中心化应用（DApp）的承诺就无从谈起。我们接下来要讨论的数字货币、智能合约、DEX 等，都是构建在这块基石之上的应用。
-
----
-
-## 第四节：从 Web2 到 Web3：一场关于数据所有权的范式转移
-
-要理解我们为何要构建 Web3 应用，必须先理解它与我们熟悉的 Web2 互联网的本质区别。
-
-Web2 的核心是**平台的互联网**。在这个世界里，Google、Facebook、Amazon 等中心化平台是绝对的主角。我们可以用一个简单的类比来理解：当你在社交媒体上发布一张照片时，这张照片为你赢得了点赞，但照片的**数据本身**被存储在平台的服务器上。平台拥有这些数据，可以分析你的喜好，向你推送广告，甚至在某些情况下可以审查或删除你的内容。在这个模型中，**你创造了价值，但平台捕获了大部分价值，你我皆是“产品”**。
-
-而 Web3 开启了一个全新的范式——**用户的互联网**，其核心在于**去中心化**与**用户主权**。让我们再用一个类比：现在，你将照片发布在一个 Web3 的社交应用 (DApp) 上。这张照片（作为一种数字资产 NFT）被记录在**区块链**这个公共账本上。它被存储在哪里、谁能访问它，都由你通过**钱包 (Wallet)** 中的**私钥 (Private Key)** 来控制。没有你的授权，任何人都无法转移或删除它。在这个新世界里，**你创造了价值，你也拥有价值**。
+**价值互联网**：区块链的原生代币和智能合约使得价值可以在互联网上直接传递，无需通过传统的金融中介。
 
 ```mermaid
 graph TD
-    subgraph "Web2: 平台拥有你的数据"
-        U1(用户 A) -- "发布内容" --> P1{中心化平台};
-        U2(用户 B) -- "发布内容" --> P1;
-        P1 -- "控制和拥有数据" --> D1[中心化数据库];
-        P1 -- "利用数据盈利" --> ADs[广告商];
+    subgraph "Web1: 只读互联网"
+        C1[内容创作者] --> P1[静态网站]
+        U1[用户被动浏览]
     end
 
-    subgraph "Web3: 你拥有你的数据"
-        U3(用户 C) -- "拥有" --> W1(个人钱包);
-        U4(用户 D) -- "拥有" --> W2(个人钱包);
-        W1 -- "通过私钥签名" --> DApp1{去中心化应用};
-        W2 -- "通过私钥签名" --> DApp1;
-        DApp1 -- "写入/读取" --> B1[区块链 (公共账本)];
-        B1 -- "记录所有权" --> W1 & W2;
+    subgraph "Web2: 读写互联网"
+        C2[用户创建内容] --> P2[中心化平台]
+        P2 --> D2[平台数据库]
+        P2 --> V2[平台捕获价值]
+    end
+
+    subgraph "Web3: 读写拥有互联网"
+        C3[用户创建内容] --> W3[个人钱包]
+        W3 --> BC[区块链]
+        BC --> O3[用户拥有价值]
     end
 ```
 
-从 Web2 到 Web3，最大的变化是**数据所有权的转移**，从平台转移到了用户个人手中，而实现这一转移的技术基石，就是区块链。
+### Web3 与区块链的关系辨析
 
----
+很多人经常混淆 Web3 和区块链的概念，实际上它们有着明确的区分和联系。
 
-## 第五节：区块链与数字货币：当代码成为信任
+**区块链是技术基础**：区块链是支撑 Web3 愿景的核心技术基础设施。它提供了去中心化的数据存储、共识机制和密码学安全保障。没有区块链，Web3 关于用户主权和去中心化的承诺就无从实现。
 
-那么，区块链究竟是如何实现这种无需中介的信任的呢？
+**Web3 是应用愿景**：Web3 是建立在这个技术基础之上的应用生态和愿景。它包含了一系列的去中心化应用（DApp）、协议和标准，旨在重新定义互联网的运作方式。
 
-我们可以将区块链想象成一个**全世界都能查看、但任何人都无法篡改的共享记事本**。当有人想在这个记事本上写一句话（即发起一笔交易）时，他需要向全世界广播。网络中的许多“会计”（即矿工或验证者）会立即来检查这句话是否符合规则。只有当大多数“会计”都同意后，这句话才会被永久地记录下来，盖上一个独一-无二的时间戳，然后装订进记事本的下一页。每一页都通过密码学技术紧紧地链着前一页，修改其中任何一页都会导致后面所有页的链条断裂，从而被立刻发现。正是通过这种精妙的密码学和共识机制，**区块链用代码和数学建立起了无需第三方中介的信任**。
+**关系类比**：如果说区块链是互联网的 TCP/IP 协议，那么 Web3 就是建立在这个协议之上的万维网、电子邮件和各种应用。区块链提供了底层的信任机制和数据结构，而 Web3 则在这个基础上构建了丰富的应用层。
 
-**比特币**是区块链的第一个杀手级应用。它利用区块链这个“记事本”，专门记录一件事情：**谁拥有多少比特币，以及它们是如何转移的**，从而成功地创造了一个点对点的电子现金系统。
+## 第二章：Web3 在中国的发展现状与机遇挑战
 
-而**以太坊**则进行了一次伟大的升级，它将“记事本”进化为了“**世界计算机**”。以太坊引入了**智能合约 (Smart Contract)** 的概念。我们可以将智能合约比作一个部署在区块链上的**自动售货机**。它的规则（例如“投入 1 元，掉出一瓶可乐”）被写在代码里，公开透明。一旦部署，它就会自动、精确地执行这些规则，任何人（包括其创建者）都无法干预。这一创新极大地扩展了区块链的应用，使得开发者可以在上面构建出去中心化金融 (DeFi)、游戏 (GameFi)、社交等无穷无尽的应用。我们后面会接触到的 ERC20 代币，就是基于以太坊智能合约发行的一种标准化数字资产。
+### 中国 Web3 发展的政策环境
 
----
+中国对 Web3 和区块链技术采取了"技术鼓励、应用谨慎"的政策导向。在技术研发层面，国家大力支持区块链技术创新，将其列为新基建的重要组成部分。2020 年，国家发改委正式将区块链纳入新型基础设施范围，各地方政府纷纷出台支持政策。
 
-## 第六节：CEX vs DEX：Web3 世界的两种“交易所”形态
+然而，在应用层面，特别是涉及加密货币和金融活动方面，监管政策相对严格。2017 年禁止 ICO 融资，2021 年进一步禁止加密货币交易和挖矿活动。这并不意味着中国反对 Web3 技术，而是希望在金融稳定的前提下，有序推进区块链技术的应用。
 
-为了方便地买卖数字货币，交易所应运而生。它主要分为两种形态：中心化交易所（CEX）和去中心化交易所（DEX）。
+### 中国 Web3 产业的技术特色
 
-**中心化交易所 (Centralized Exchange, CEX)**，由一个中心化的公司运营，我们可以将它类比为一家**数字货币银行**。**我们即将构建的 Bizzan 交易所就是一个典型的 CEX**。用户需要先将自己的数字货币（如 BTC）从个人钱包**充值**到 CEX 分配的地址，此时，**资产的控制权暂时转移给了 CEX**。随后，用户在 CEX 网站上下单、买卖，所有的操作都只是 CEX 在其**内部数据库**里修改数字（例如，在我们项目的 `wallet` 模块中更新用户余额），这个过程不发生在区块链上，因此**速度极快、成本极低**。当用户需要**提现**时，CEX 才会从它控制的“金库”（热钱包或冷钱包）里，为用户做一笔真正的链上转账。
+在这样的大环境下，中国 Web3 产业呈现出独特的发展特点：
 
-**去中心化交易所 (Decentralized Exchange, DEX)** 则完全不同，它没有中间公司，交易由区块链上的**智能合约**直接撮合。我们可以把它比作一个**开放的数字集市**。用户带着自己的钱包来到集市，钱包始终在自己的口袋里。当看到一个卖苹果的智能合约时，用户直接通过钱包授权，用自己的钱和合约交换苹果。整个过程是**点对点**的，资产从未离开过用户的控制。交易完成后，钱货两清，用户的钱包里多了苹果，少了钱。Uniswap 和 PancakeSwap 是 DEX 的杰出代表。
+**联盟链优先**：相比于公有链，中国企业更倾向于发展联盟链。蚂蚁链、腾讯云区块链、百度超级链等都是典型的联盟链平台，主要服务于企业级应用场景。
 
-| 对比维度     | 中心化交易所 (CEX)                           | 去中心化交易所 (DEX)                               |
-| :----------- | :------------------------------------------- | :------------------------------------------------- |
-| **资产托管** | **托管 (Custodial)**：类似银行，你信任平台。 | **非托管 (Non-custodial)**：资产始终在自己钱包里。 |
-| **交易性能** | **高**：链下记账，体验丝滑。                 | **低**：链上确认，受限于区块链性能。               |
-| **用户体验** | **友好**：功能丰富，易于上手，有客服。       | **复杂**：需要自己管理钱包、私钥，理解 Gas 费。    |
-| **安全性**   | 平台是黑客的中心目标，有跑路风险。           | 用户自担私钥保管风险，需警惕合约漏洞。             |
+**产业区块链**：中国 Web3 应用更多聚焦于实体产业的数字化转型，包括供应链金融、产品溯源、政务服务等。这符合"技术服务实体经济"的发展导向。
 
----
+**数字人民币**：作为央行数字货币，数字人民币的推广为 Web3 在中国的发展提供了新的基础设施和应用场景。
 
-## 第七节：本项目定位：为何我们选择构建一个 CEX
+**NFT 数字藏品**：中国的 NFT 市场以"数字藏品"的形式存在，避免了加密货币的交易，专注于文化产权和艺术品的数字化。
 
-既然 DEX 如此符合 Web3 的去中心化精神，为何我们的课程选择构建一个技术上更“传统”的 CEX 呢？
+### 中国 Web3 人才需求与技术机会
 
-答案在于**学习价值**。一个高性能的 CEX 是现代后端技术的集大成者，它要求我们必须掌握微服务、高并发、低延迟、撮合算法、复杂的账户系统以及严格的资金安全策略。这套技术栈的**普适性极强**，不仅局限于 Web3 领域，其架构思想和工程实践完全可以平移到电商秒杀、实时竞价、在线游戏等任何高并发互联网场景，是后端开发者硬核技能的试金石。
+尽管面临政策限制，中国对 Web3 技术人才的需求依然旺盛。主要机会集中在以下几个领域：
 
-同时，CEX 是连接现实世界（法币）和 Web3 世界（加密货币）最重要的**桥梁**和**入口**。学习构建 CEX，能让我们深刻理解资金是如何在这两个世界之间流转的，这其中就包括了与区块链节点进行交互的核心技术。
+**传统企业的区块链转型**：银行、保险、供应链等传统行业需要大量懂区块链的技术人才来推动数字化转型。
 
-此外，CEX 涵盖了用户系统 (KYC)、法币通道 (OTC)、币币交易、资产管理等一套完整的业务闭环，能让我们学习到更全面的金融产品设计。
+**联盟链技术开发**：各大科技公司都在投入联盟链平台的开发，需要既懂区块链又懂业务场景的复合型人才。
 
-**因此，本项目的定位是：**
+**Web2.5 应用开发**：在合规框架下，将 Web3 技术与传统互联网应用结合，创造新的商业模式。
 
-> 以构建一个企业级的、基于微服务架构的**中心化交易所（CEX）**为载体，深入学习和实践分布式、高并发金融系统的设计与开发，同时掌握与主流区块链网络进行交互的核心 **Web3 对接技术**。
+**跨境 Web3 业务**：中国企业在海外开展 Web3 业务，需要大量了解国际 Web3 生态的技术人才。
 
----
+## 第三章：Web3 交易所的核心概念与业务模式
 
-## 第八节：课程结构总览：一条清晰的学习路径
+### 数字货币交易所的定义与分类
 
-为了让大家有一个清晰的学习路径，我们将整个课程严格按照以下五个核心部分展开：
+数字货币交易所是连接传统金融世界与 Web3 加密世界的重要桥梁，是整个区块链生态系统的核心基础设施。从不同的技术架构和运营模式来看，交易所可以分为以下几种类型：
 
-- **Part 1：基础与准备 (第 1-3 章)**
-  我们将首先建立宏观的 Web3 世界观，然后动手搭建本地开发环境，并对项目进行首次启动和微服务架构的总览。
+**中心化交易所（CEX）**：由公司运营的传统交易所模式。用户将资产充值到交易所控制的地址，交易在平台内部数据库完成，具有高性能、低成本、易用性强的特点。典型代表包括币安、火币、OKX 等。
 
-- **Part 2：核心基础设施剖析 (第 4-9 章)**
-  在这一部分，我们将深入学习项目所依赖的“水电煤”：包括 MySQL、MongoDB、Redis、一个名为 **AQMD-NETTY** 的高性能 WebSocket 框架，以及作为异步通信核心的 Kafka。
+**去中心化交易所（DEX）**：基于智能合约的点对点交易平台。用户始终控制自己的资产，交易在链上完成，具有安全性高、抗审查的特点。典型代表包括 Uniswap、PancakeSwap 等。
 
-- **Part 3：核心业务微服务源码剖析 (第 10-16 章)**
-  这是课程的主体部分。我们将逐一深入 `ucenter-api`, `wallet`, `exchange-api`, `exchange`, `otc-api`, `market`, `admin` 等所有核心业务微服务的源码。
+**混合交易所**：结合 CEX 和 DEX 优点的创新模式，通常采用链下撮合、链上结算的架构。
 
-- **Part 4：打通 Web3 的桥梁 (第 17-18 章)**
-  我们将进入 `02_bizzan_wallet_rpc` 项目，学习如何与比特币/USDT-Omni 和以太坊/ERC20 网络进行真实的 RPC 交互，这是连接 Web2 与 Web3 的关键。
+**托管交易所**：专注于为机构用户提供数字资产托管和交易服务的专业平台。
 
-- **Part 5：全流程串讲与总结 (第 19-22 章)**
-  最后，我们将通过三个核心业务流程（用户注册与充币、币币交易、提币与 OTC）将所有知识点串联起来，形成一个完整的知识网络，并进行课程总结与展望。
+### Web3 交易所的核心业务功能
 
----
+一个完整的 Web3 交易所通常包含以下核心业务模块：
 
-## 总结与起航
+**用户中心**：负责用户注册、KYC 认证、安全管理等基础服务。在合规要求下，交易所需要对用户进行实名认证，并建立完善的安全防护机制。
 
-在本章中，我们从 Web3 的宏大叙事出发，用通俗的类比理解了区块链、智能合约等核心概念，并厘清了 CEX 与 DEX 的核心差异。最终，我们明确了本次课程的目标、收益和一份精确、全新的学习路径。
+**钱包服务**：管理用户的数字资产，包括充值、提现、余额查询等功能。钱包服务是交易所最核心的模块之一，直接关系到用户资产安全。
 
-我们现在已经站在了地图的起点，对前方的道路有了清晰的认识。从下一章开始，我们将正式进入实战，挽起袖子，从零开始搭建我们的开发环境。
+**交易引擎**：处理用户的买卖订单，进行价格撮合和交易执行。这是交易所的技术核心，需要具备高并发、低延迟的特性。
 
-准备好，迎接挑战吧！
+**行情中心**：收集、处理和分发市场行情数据，包括实时价格、K 线图、深度图等。行情数据是交易决策的重要依据。
+
+**法币交易（OTC）**：提供法币与数字货币之间的兑换服务，是连接传统金融与加密世界的重要通道。
+
+**资产管理**：为用户提供理财、借贷等增值服务，帮助用户实现资产的保值增值。
+
+### 交易所的技术架构演进
+
+现代交易所的技术架构经历了从单体应用到微服务架构的演进过程：
+
+```mermaid
+graph TB
+    subgraph "第一阶段：单体架构"
+        A1[Web应用] --> D1[数据库]
+        A1 --> C1[缓存]
+    end
+
+    subgraph "第二阶段：垂直拆分"
+        A2[用户服务] --> D2_1[用户DB]
+        A3[交易服务] --> D2_2[交易DB]
+        A4[钱包服务] --> D2_3[钱包DB]
+    end
+
+    subgraph "第三阶段：微服务架构"
+        subgraph "服务层"
+            MS1[用户中心]
+            MS2[交易引擎]
+            MS3[钱包服务]
+            MS4[行情中心]
+            MS5[OTC服务]
+        end
+
+        subgraph "基础设施层"
+            MQ[Kafka消息队列]
+            REDIS[Redis缓存]
+            MG[MongoDB时序数据]
+            MYSQL[MySQL关系数据]
+        end
+
+        subgraph "接入层"
+            NG[Nginx网关]
+            WS[WebSocket]
+        end
+    end
+```
+
+## 第四章：Bizzan 交易所的技术选型与架构设计
+
+### 微服务架构的详细设计
+
+Bizzan 交易所采用基于 Spring Cloud 的微服务架构，将复杂的交易系统拆分为多个独立的服务模块：
+
+**用户中心服务（ucenter-api）**：负责用户注册、登录、KYC 认证、权限管理等核心用户功能。采用 Spring Security + JWT 实现安全认证，支持多种登录方式。
+
+**钱包服务（wallet）**：管理用户的数字资产，包括多币种支持、充值提现、余额查询、交易记录等。采用热冷钱包分离策略，确保资产安全。
+
+**交易网关服务（exchange-api）**：提供统一的交易接口，处理订单提交、查询、撤单等操作。作为用户与撮合引擎之间的桥梁。
+
+**撮合引擎服务（exchange）**：核心的交易撮合引擎，实现订单簿管理、价格撮合、成交确认等功能。采用内存计算技术，实现毫秒级撮合性能。
+
+**行情中心服务（market）**：负责 K 线生成、行情推送、深度计算等市场数据服务。通过 WebSocket 实现实时行情推送。
+
+**法币交易服务（otc-api）**：处理法币与数字货币的交易，包括商户管理、订单匹配、资金清算等功能。
+
+**后台管理服务（admin）**：提供系统管理、运营数据统计、风险控制等后台功能。
+
+**主流区块链节点服务（btc-rpc）**：集成与比特币、以太坊等主流区块链节点的 RPC 通信，实现链上数据同步、交易、钱包管理等功能。
+
+## 总结：构建 Web3 交易所的技术收获
+
+通过构建 Bizzan 交易所这个项目，我们不仅能学习具体的技术实现，更重要的是建立了一套完整的金融科技系统开发思维。
+
+**技术能力的全面提升**：从单纯的 CRUD 开发者成长为能够设计和实现复杂分布式系统的架构师。掌握微服务架构、高并发处理、分布式缓存、消息队列等核心技术。
+
+**金融业务的深度理解**：深入理解数字货币交易所的业务逻辑，包括撮合机制、资金安全、合规要求等金融科技的核心要素。
+
+**Web3 技术的实践经验**：掌握与比特币、以太坊等主流区块链网络集成的方法，理解 Web2 与 Web3 系统融合的技术路径。
+
+**系统安全的系统性思维**：建立从应用到基础设施的全方位安全防护意识，掌握金融级系统的安全设计原则。
+
+Web3 的浪潮正在重塑互联网的格局，作为后端开发者，掌握这些核心技术不仅能让我们在这个新兴时代找到自己的位置，更能为我们打开一扇通往未来的技术之门。
+
+现在，让我们开始这段激动人心的技术旅程，从下一章开始，我们将正式进入实战阶段，搭建我们的开发环境，一步步构建这个完整的 Web3 金融科技系统。
