--- a/doc/02.本地开发环境搭建.md
+++ b/doc/02.本地开发环境搭建.md
@@ -1,51 +1,298 @@
-# 第二章：铸造工厂——为你的交易所帝国奠基
+# 从零搭建交易所开发环境：一份完整的技术基础设施指南
 
-## 开篇：工欲善其事，必先利其器
+## 引言：当你在本地运行第一个微服务时遇到的环境配置噩梦
 
-在上一章的宏观探索之后，我们需从云端回到地面，开始工程师最坚实的一步——搭建一个稳定、高效的本地开发环境。这如同为一座摩天大楼打下坚实的地基，是后续一切宏伟蓝图得以实现的前提。
+你是否经历过这样的场景：满怀信心地下载了一个复杂的微服务项目，准备在本地一展身手，结果却陷入了无尽的环境配置地狱。JDK 版本不匹配、数据库连接失败、中间件端口冲突、依赖包下载缓慢...一个个看似简单的问题累积起来，足以消磨掉最初的开发热情。
 
-本章将作为一份精确的施工图纸，引导你一步步安装所有必要的软件，配置好各个中间件，并最终点亮项目的“心脏”——服务注册中心。请保持耐心和细致，因为当我们完成这一章时，你的本地机器将不再仅仅是一台电脑，而是一个能够孕育出整个交易所系统的“**数字工厂**”。
+特别是当我们面对的是一个数字货币交易所这样的复杂系统时，环境配置的挑战会更加严峻。这个系统不仅需要传统的 MySQL、Redis 等基础设施，还要集成 MongoDB 存储 K 线数据、Kafka 处理异步消息、Zookeeper 管理分布式协调。每一项服务的版本兼容性、网络配置、资源分配都可能成为潜在的障碍。
 
----
+本文将带你彻底解决这个难题。我们不会采用零散的手动配置方式，而是通过现代企业开发的最佳实践——Docker 容器化部署，一步到位地构建一个完整、稳定、可复现的开发环境。当你完成本文的指导后，你的本地机器将不再是一台普通的电脑，而是一个功能完备的"微型数据中心"，能够支撑整个交易所系统的稳定运行。
 
-### 第一节：备齐核心工具箱：从 JDK 到 IDEA
+## 第一章：开发工具链的完整配置
 
-我们的工厂建设始于基础工具的准备。首先是 **JDK 1.8**，作为 Java 开发的基石，它是我们编写和运行所有后端代码的动力源泉。接下来是 **Maven**，我们强大的项目“物料管理员”，它能自动下载和管理项目所需的所有第三方库。最后，我们需要一个高效的集成开发环境 **IntelliJ IDEA** 和版本控制工具 **Git**。IDEA 是我们进行编码、调试的“主控台”，而 Git 则是我们从代码仓库获取蓝图（源码）并管理每一次修改的“版本记录仪”。
+### Java 开发环境的深度配置
 
----
+构建交易所系统的第一步是建立坚实的 Java 开发基础。我们需要 JDK 1.8 作为运行环境，这个版本经过了充分的企业级验证，与 Spring Boot 2.x 系列框架完美兼容，同时拥有丰富的生态系统支持。
 
-### 第二节：启动基础设施：Docker 一键部署“五脏六腑”
+安装 JDK 1.8 后，我们需要确保环境变量配置正确。在 Windows 系统中，需要设置`JAVA_HOME`指向 JDK 安装目录，并将`%JAVA_HOME%\bin`添加到 PATH 环境变量中。在 Linux 或 macOS 系统中，则需要在`~/.bashrc`或`~/.zshrc`文件中添加相应的配置。配置完成后，通过`java -version`和`javac -version`命令验证安装是否成功。
 
-我们的交易所系统依赖于一个强大的后端服务集群，包括用于核心数据存储的 **MySQL**，作为高性能缓存的 **Redis**，存储时序数据的 **MongoDB**，以及作为系统异步通信总线的 **Kafka**。
+Maven 作为项目构建工具，负责管理项目的依赖关系和构建流程。推荐使用 Maven 3.6.x 版本，它与 JDK 1.8 搭配使用最为稳定。Maven 的配置文件`settings.xml`中可以配置国内镜像源，显著提升依赖包的下载速度。
 
-传统的手动安装方式不仅繁琐且易出错，因此我们采用现代企业开发的主流方式——**Docker Compose 一键部署**。在项目源码的**根目录**下，我们已经提供了一个 `docker-compose.yml` 文件，它像一张预设的蓝图，定义了所有依赖服务。
-
-```mermaid
-graph TD
-    subgraph "Docker 环境 (一键启动)"
-        A[docker-compose.yml] --> B(MySQL 5.7);
-        A --> C(Redis 6.x);
-        A --> D(MongoDB 4.4);
-        A --> E(Zookeeper);
-        A --> F(Kafka);
-        E --> F;
-    end
+```xml
+<!-- settings.xml中的镜像配置示例 -->
+<mirrors>
+    <mirror>
+        <id>aliyunmaven</id>
+        <mirrorOf>*</mirrorOf>
+        <name>阿里云公共仓库</name>
+        <url>https://maven.aliyun.com/repository/public</url>
+    </mirror>
+</mirrors>
 ```
 
-你只需在该文件所在的目录下打开命令行，运行 `docker-compose up -d` 命令。Docker 便会自动拉取镜像，并以后台模式启动所有服务。稍等片刻，通过 `docker ps` 命令，你就能看到所有服务容器都已成功运行，标志着我们交易所的“五脏六腑”已全部就位并开始健康运转。
+### IntelliJ IDEA 的高级配置
 
----
+IntelliJ IDEA 作为我们的主要开发工具，需要进行一些针对性配置来提升开发效率。首先是 Maven 配置，需要指定正确的 Maven 安装路径和 settings.xml 文件位置。其次是代码编码设置，统一使用 UTF-8 编码，避免中文注释出现乱码。
 
-### 第三节：导入项目蓝图：源码配置与数据库初始化
+对于大型项目，IDEA 的内存配置尤为重要。建议在`idea64.exe.vmoptions`文件中调整堆内存大小：
 
-基础设施就绪后，我们需要将项目的“设计蓝图”——也就是源码——导入我们的开发主控台 IDEA 中。使用 Git 克隆项目源码到本地后，在 IDEA 中将 `01_bizzan_framework/pom.xml` 和 `02_bizzan_wallet_rpc/pom.xml` 作为 Maven 项目导入。
+```
+-Xms2048m
+-Xmx4096m
+-XX:ReservedCodeCacheSize=1024m
+```
 
-源码导入后，我们需要为交易所准备好“数据仓库”。使用任何数据库客户端连接到 Docker 中运行的 MySQL 服务，创建一个名为 `bitrade` 的新数据库，并**务必选择 `utf8mb4` 作为字符集**（这对于支持全球用户，包括存储 Emoji 表情等至关重要）。最后，执行 `01_bizzan_framework/sql/bitrade.sql` 文件中的所有 SQL 语句，完成表结构的创建和初始数据的填充。
+这样的配置能够确保 IDE 在处理大型项目时保持流畅的响应速度。同时，安装一些实用的插件如 Lombok、MyBatis Helper、Docker 等，可以显著提升开发效率。
 
----
+## 第二章：Docker 容器化基础设施部署
 
-### 第四节：点亮指挥中心：运行 Eureka 注册中心
+### Docker 环境的技术原理
 
-在启动庞大的微服务舰队之前，我们必须先启动整个架构的“交通指挥中心”——**Eureka 服务注册中心**。在 IDEA 的项目结构中，找到 `cloud` 模块下的 `CloudApplication.java` 文件并运行它。当控制台输出启动成功的日志后，立即在浏览器中访问 `http://localhost:7000`。如果你能看到 Eureka 的管理界面，那么恭喜你，我们“数字工厂”的中央控制系统已经成功点亮！
+Docker 通过容器化技术解决了"在我的机器上能运行"这个经典问题。它将应用程序及其所有依赖打包成一个轻量级、可移植的容器，确保在任何环境中都能保持一致的运行表现。
 
-至此，我们的工厂已经通电，并为后续所有生产线的启动做好了准备。在下一章，我们将逐一“点亮”交易所的所有微服务，让整个系统在你的本地机器上完整地运转起来，并一窥其震撼的微服务架构全貌！
+对于交易所系统这种复杂的微服务架构，Docker 的价值更加凸显。传统的虚拟机方式资源消耗大、启动速度慢，而 Docker 容器共享宿主机内核，启动时间秒级，资源占用接近原生应用。
+
+### 交易所基础设施的容器化架构
+
+我们的交易所系统依赖于多个中间件服务，每个服务都有其特定的作用和配置要求。MySQL 5.7 作为主数据库，存储用户信息、订单记录、账户余额等核心业务数据。Redis 6.x 作为高速缓存，处理会话信息、验证码、热点数据等需要快速访问的内容。
+
+MongoDB 4.4 专门用于存储时序数据，特别是 K 线数据、成交记录等。Kafka 配合 Zookeeper 构成消息队列系统，处理服务间的异步通信，如订单状态变更、行情数据分发等。
+
+```yaml
+# docker-compose.yml 核心配置示例
+services:
+  mysql:
+    image: mysql:8.0.42
+    container_name: mysql
+    environment:
+      # 时区上海
+      TZ: Asia/Shanghai
+      # root 密码
+      MYSQL_ROOT_PASSWORD: NjfKttzTsrWeJ8jA1
+      # 初始化数据库
+      MYSQL_DATABASE: exchange
+      MYSQL_USER: exchange
+      MYSQL_PASSWORD: NjfKttzTsrWeJ8jA1
+    ports:
+      - "3306:3306"
+    volumes:
+      # 数据挂载
+      - ./mysql/data/:/var/lib/mysql/
+      # 配置挂载
+      - ./mysql/conf/:/etc/mysql/conf.d/
+    command:
+      # 将mysql8.0默认密码策略 修改为 原先 策略 (mysql8.0对其默认策略做了更改 会导致密码无法匹配)
+      --default-authentication-plugin=mysql_native_password
+      --character-set-server=utf8mb4
+      --collation-server=utf8mb4_general_ci
+      --explicit_defaults_for_timestamp=true
+      --lower_case_table_names=1
+    privileged: true
+
+  redis:
+    image: redis:7.2.8
+    container_name: redis
+    ports:
+      - "6379:6379"
+    environment:
+      # 时区上海
+      TZ: Asia/Shanghai
+    volumes:
+      # 配置文件
+      - ./redis/conf:/redis/config
+      # 数据文件
+      - ./redis/data/:/redis/data/
+    command: "redis-server /redis/config/redis.conf"
+    privileged: true
+
+  zookeeper:
+    image: confluentinc/cp-zookeeper:7.0.1
+    ports:
+      - "2181:2181"
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    volumes:
+      - ./zookeeper/data:/var/lib/zookeeper/data
+
+  kafka:
+    image: confluentinc/cp-kafka:7.0.1
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://192.168.0.103:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_MESSAGE_MAX_BYTES: 2000000
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ./kafka/data:/var/lib/kafka/data
+    depends_on:
+      - zookeeper
+
+  mongo:
+    image: mongo:3.6
+    container_name: mongo
+    restart: always
+    ports:
+      - "27017:27017"
+    environment:
+      TZ: Asia/Shanghai
+      MONGO_INITDB_ROOT_USERNAME: mongo
+      MONGO_INITDB_ROOT_PASSWORD: mongo
+    volumes:
+      - ./mongodb/db:/data/db
+      - ./mongodb/log:/var/log/mongodb
+    privileged: true
+
+networks:
+  default:
+    name: web3-network
+```
+
+这个 Docker Compose 配置文件定义了完整的基础设施架构。每个服务都进行了端口映射，确保我们可以在宿主机上直接访问。同时通过数据卷持久化重要数据，避免容器重启后数据丢失。
+
+### 一键部署与验证
+
+在项目根目录执行`docker-compose up -d`命令，Docker 会按照配置文件的定义自动下载镜像并启动所有服务。这个过程通常需要几分钟时间，具体取决于网络速度。
+
+部署完成后，我们需要验证每个服务是否正常运行：
+
+```bash
+# 查看所有容器状态
+docker ps
+
+# 检查MySQL连接
+docker exec -it mysql mysql -uroot -proot -e "SHOW DATABASES;"
+
+# 测试Redis连接
+docker exec -it redis redis-cli ping
+
+# 验证MongoDB状态
+docker exec -it mongo mongo admin --username admin --password admin123 --eval "db.adminCommand('ismaster')"
+
+# 查看Kafka Topic列表
+docker exec -it kafka kafka-topics.sh --list --bootstrap-server localhost:9092
+```
+
+这些验证步骤确保了每个中间件服务都处于正常工作状态，为后续的应用程序部署奠定了坚实基础。
+
+## 第三章：项目导入与数据库初始化
+
+### 源码获取与项目结构理解
+
+基础设施准备就绪后，我们需要获取项目源码并进行正确配置。通过 Git 克隆项目仓库到本地，通常我们会得到一个包含多个模块的 Maven 多模块项目。
+
+项目的根目录结构一般包含以下关键组件：
+
+- `01_bizzan_framework`：主要的业务框架模块
+- `02_bizzan_wallet_rpc`：区块链 RPC 集成模块
+- `sql`：数据库初始化脚本
+- `docker-compose.yml`：Docker 部署配置文件
+
+### Maven 项目的导入与依赖解析
+
+在 IntelliJ IDEA 中导入 Maven 项目时，选择`pom.xml`文件作为导入入口。IDEA 会自动识别多模块项目结构，并开始解析依赖关系。这个过程可能需要一些时间，特别是第一次导入时需要下载大量的依赖包。
+
+如果遇到依赖下载缓慢的问题，可以在 Maven 设置中配置使用国内镜像。同时，确保项目使用的 JDK 版本与 IDEA 设置的项目 SDK 版本一致。
+
+### 数据库的精确初始化
+
+数据库初始化是环境搭建中最关键的步骤之一。首先需要连接到 Docker 中运行的 MySQL 实例，创建项目所需的数据库。推荐使用专业的数据库客户端工具如 DataGrip 或 Navicat 进行操作。
+
+创建数据库时，字符集的选择至关重要。必须使用`utf8mb4`字符集，因为它支持完整的 Unicode 字符集，包括 Emoji 表情符号。这对于全球化交易所来说非常重要，用户昵称、交易备注等字段都可能包含特殊字符。
+
+```sql
+-- 创建数据库的完整SQL语句
+CREATE DATABASE `bitrade`
+CHARACTER SET utf8mb4
+COLLATE utf8mb4_unicode_ci;
+
+-- 查看数据库创建结果
+SHOW CREATE DATABASE bitrade;
+```
+
+数据库创建完成后，需要执行初始化 SQL 脚本。这个脚本通常包含表结构定义、索引创建、初始数据插入等内容。执行时要确保脚本按照正确的顺序运行，避免外键约束导致的错误。
+
+对于大型项目，建议使用数据库迁移工具如 Flyway 或 Liquibase 来管理数据库版本。这些工具能够自动跟踪数据库变更历史，确保团队开发环境中数据库结构的一致性。
+
+## 第四章：微服务架构的启动验证
+
+### 服务注册中心的核心作用
+
+在微服务架构中，服务注册中心扮演着"交通指挥中心"的角色。所有微服务启动时都会向注册中心注册自己的网络地址，当服务间需要相互调用时，通过注册中心发现目标服务的位置。
+
+Eureka 是 Netflix 开源的服务注册中心，具有高可用性、容错性强等特点。我们的项目采用 Eureka 作为服务治理的基础组件，为整个微服务集群提供服务发现和注册功能。
+
+### Eureka 服务器的启动与验证
+
+在 IDEA 的项目结构中，Eureka 服务器通常位于`cloud`模块下，主启动类为`CloudApplication.java`。运行这个类之前，需要确保相关的配置文件正确设置。
+
+```yaml
+# application.yml Eureka配置示例
+server:
+  port: 7000
+
+eureka:
+  instance:
+    hostname: localhost
+  client:
+    register-with-eureka: false
+    fetch-registry: false
+    service-url:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+
+spring:
+  application:
+    name: eureka-server
+```
+
+启动 Eureka 服务器后，在浏览器中访问`http://localhost:7000`，应该能看到 Eureka 的管理界面。界面上会显示当前注册的服务列表，虽然此时还没有业务服务注册，但界面本身的成功加载就证明了 Eureka 服务器运行正常。
+
+### 微服务启动的系统性验证
+
+Eureka 服务器成功启动后，我们可以开始逐一启动其他微服务。每个服务的启动过程都应该遵循以下验证流程：
+
+1. 检查服务是否成功向 Eureka 注册
+2. 验证服务间的网络连通性
+3. 确认数据库连接正常
+4. 测试核心功能接口
+
+通过系统性的验证，我们可以确保整个微服务架构的基础设施运行正常，为后续的功能开发做好准备。
+
+## 第五章：常见问题与解决方案
+
+### 环境配置过程中的典型问题
+
+在搭建开发环境的过程中，开发者经常会遇到一些典型问题。了解这些问题的解决方案，可以大大提升环境搭建的效率。
+
+**端口冲突问题是**最常见的困扰之一。当本地已经运行了某些服务占用了相同的端口时，新启动的容器就会失败。解决方案是修改 docker-compose.yml 中的端口映射，或者停止占用端口的其他服务。
+
+**内存不足问题**在低配置机器上比较常见。Docker 容器运行需要消耗内存，如果同时启动多个中间件服务，可能会超出系统可用内存。可以通过调整 Docker 的内存限制，或者按需启动部分服务来解决这个问题。
+
+**网络连接问题**通常表现为容器间无法正常通信。这可能是由于 Docker 网络配置问题，或者是防火墙阻止了容器间的访问。检查 Docker 网络配置和系统防火墙设置是解决这类问题的关键。
+
+### 依赖下载缓慢的优化策略
+
+Maven 依赖下载缓慢是影响开发效率的重要因素。除了配置国内镜像外，还可以采用以下优化策略：
+
+使用 Maven 本地仓库缓存，将常用的依赖包预先下载到本地。在团队内部搭建 Maven 私有仓库，缓存项目依赖。对于大型项目，考虑使用 Gradle 替代 Maven，Gradle 的依赖管理机制更加高效。
+
+### 数据库连接问题的排查思路
+
+数据库连接失败通常涉及多个方面的问题。首先要确保数据库服务正常运行，其次检查连接参数是否正确，包括主机地址、端口、用户名密码等。
+
+还要注意字符集配置，确保客户端和服务器使用相同的字符集。对于复杂的连接问题，可以启用数据库的详细日志，通过日志信息定位具体问题。
+
+## 总结：从环境配置到开发就绪
+
+通过本文的详细指导，我们成功构建了一个完整的交易所开发环境。这个过程不仅仅是安装软件和配置服务，更重要的是建立了一套可重复、可维护的环境管理体系。
+
+我们采用 Docker 容器化技术解决了环境一致性问题，通过 Maven 管理项目依赖，使用 Eureka 实现服务治理。这套技术栈不仅适用于交易所项目，也可以作为其他复杂微服务项目的标准环境配置方案。
+
+现在你的本地开发环境已经准备就绪，可以开始真正的代码开发工作了。下一章我们将深入探讨交易所的微服务架构设计，理解各个服务组件的职责分工和协作机制。
+
+记住，良好的开发环境是高效开发的基础。投入时间构建稳定的环境配置，将在后续的开发过程中带来数倍的效率提升。
